# KubeDash

./: .gitignore  .goreleaser.yaml  Makefile  README.md  Taskfile.yml  env.sh  index.yaml  kubedash-3.1.0.tgz  mkdocs.yml  results.json  run_mkdocs.sh  versions.json
src/kubedash/: .dccache  .skaffold.yaml  README.md  TODO.md  config.py  devspace.yaml  gunicorn_conf.py  kubedash.ini.example  kubedash.py  pyproject.toml  requirements.txt  run-dev.sh  run-otel.sh  run.sh  test.sh  wsgi.py
src/kubedash/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/kubedash/.devcontainer/config/: registry-config.yml  rootCA.pem
src/kubedash/blueprint/: api.py  auth.py  cluster.py  cluster_permission.py  dashboard.py  extension_api.py  extension_root.py  histrory.py  metrics.py  network.py  other_resources.py  security.py  settings.py  storage.py  user.py  workload.py
src/kubedash/functions/: commands.py  components.py  db.py  helper_functions.py  jinja2_decoders.py  k8s.bak  k8s.py  logger.py  registry.py  routes.bak  routes.py  sso.py  user.py
src/kubedash/kubedash/: __init__.py  version.py
src/kubedash/kubedash/blueprint/: api.py  auth.py  cluster.py  cluster_permission.py  dashboard.py  history.py  metrics.py  network.py  other_resources.py  security.py  settings.py  storage.py  user.py  workload.py
src/kubedash/kubedash/lib/: before_request.py  cache.py  cert_utils.py  commands.py  components.py  config.py  custom_jinja2.py  helper_functions.py  init_functions.py  initializers.py  logfilters.py  metrics.py  opentelemetry.py  sso.py  user.py
src/kubedash/kubedash/templates/: base.html.j2  base2.html.j2  base3.html.j2
src/kubedash/lib/: before_request.py  cache.py  cert_utils.py  commands.py  components.py  config.py  custom_jinja2.py  helper_functions.py  init_functions.py  initializers.py  jinja2_decoders.py  metrics.py  opentelemetry.py  paths.py  prometheus.py  sso.py  user.py
src/kubedash/lib/extension_api/: README.MD  __init__.py  authentication.py  authorization.py  errors.py  helpers.py  projects.py
src/kubedash/lib/k8s/: __init__.py  certificate.py  crds.py  metrics.py  namespace.py  network.py  node.py  other.py  security.py  server.py  server2.py  storage.py  workload.py  workload_cahers.py
src/kubedash/lib_functions/: commands.py  components.py  helper_functions.py  init_functions.py  initializers.py  jinja2_decoders.py  k8s.py  opentelemetry.py  prometheus.py  registry.py  sso.py  user.py
src/kubedash/lib_plugins/: cert_manager.py  external_loadbalancer.py  gateway_api.py  helm.py  registry.py
src/kubedash/lib_routes/: accounts.py  api.py  dashboard.py  helm.py  limits.py  main.py  metrics.py  namespaces.py  networks.py  nodes.py  pods.py  registry.py  security.py  sso.py  storages.py  workloads.py
src/kubedash/migrations/versions/: 22fb365284ec_change_user_user_type_length_for_pgsql.py  39704d8c644a_create_sessions_table.py  5062431c2bac_add_metrics_tables.py  5598d31e675a_registry_table.py  7253f5a7bfda_users_table.py  9ce5d992dc50_kubectl_config_table.py  d0be67da4314_kubectl_config_table.py  d372484d86c9_registry_event_table.py  (+3 more)
src/kubedash/plugins/: cert_manager.py  external_loadbalancer.py  gateway_api.py
src/kubedash/templates/: 400.html.j2  404.html.j2  500.html.j2  base.html  base.html.j2  base2.html.j2  base_booter.html.j2  cert-manager-data.html.j2  cert-manager.html copy.j2  cert-manager.html.j2  chart-data.html.j2  charts.html  charts.html.j2  cluster-metrics.html.j2  cluster-role-bindings.html.j2  cluster-role-data.html.j2  cluster-roles.html  cluster-roles.html.j2  clusters.html.j2  configmap-data.html.j2  configmaps.html.j2  daemonsets-data.html.j2  daemonsets.html.j2  dashboard.html.j2  deployment-data.html.j2  deployments.html.j2  export-cert.html.j2  export-openid.html.j2  export.html.j2  external-loadbalancer-data.html.j2  external-loadbalancer.html.j2  group-privilege-edit.html.j2  group-privileges.html.j2  groups.html.j2  hpa-data.html.j2  hpa.html.j2  ingress-class-data.html.j2  ingress-classes.html.j2  ingress-data.html.j2  ingress.html.j2  (+62 more)
src/kubedash/tests/: conftest.py  requirements.txt  test_basic.py
src/kubespace/: __operator.py  pyproject.toml  run.sh
src/kubespace/__yamls/: 1.yaml  README.md  tst_Space.yaml
src/kubespace/kubespace/: __init__.py  __main__.py
(+590 files in other folders)
